<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/krishiraj"
        android:textAllCaps="true"
        android:textColor="#1a6600"
        android:textSize="40sp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:padding="5dp"
        android:textColor="#004d00"
        android:textColorHint="#0E0707"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="#004d00"
        android:layout_marginTop="30dp"
        android:textColorHint="#090808"/>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:textColor="@color/rememberMe"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:textColor="@color/forgotPassword"
            android:padding="5dp"
            android:textSize="20sp"/>


    </RelativeLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/clickme"
        android:textAllCaps="false"
        android:textColor="#EAF0F1"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/curvedbutton"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuser_sign_up"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:textColor="@color/newUser"
        android:textSize="28sp"/>

</LinearLayout>