<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ContactUs"
    android:layout_gravity="center_horizontal"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_local_phone_black_24dp"
        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
        android:drawablePadding="10dp"/>

    <TextView
        android:drawableStart="@drawable/ic_mail_green_24dp"
        android:drawableLeft="@drawable/ic_mail_green_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawablePadding="10dp"/>

    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"/>

    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_user"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:drawablePadding="10dp"/>

    <EditText
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_message"
        android:inputType="text"
        android:drawableStart="@drawable/ic_message_black_24dp"
        android:drawableLeft="@drawable/ic_message_black_24dp"
        android:drawablePadding="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_send"
        android:textColor="#ffffff"
        android:backgroundTint="#019031"/>



</LinearLayout>