<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imagescreen"
        android:contentDescription="@string/screenimage"
        android:layout_width="141dp"
        android:layout_height="108dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_assignment_ind_black_24dp"/>

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_amp_register"
        android:layout_toEndOf="@id/imagescreen"
        android:layout_toRightOf="@id/imagescreen"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login_or_create_account"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_below="@id/textview1"
        android:layout_toEndOf="@id/imagescreen"
        android:layout_toRightOf="@id/imagescreen"
        android:gravity="center"
        android:layout_marginTop="5dp"/>
</RelativeLayout>