<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Checkout">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_of_vegetable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="113dp"
            android:layout_height="116dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewprice"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:id="@+id/textViewprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/textView212"
            android:layout_toRightOf="@id/textView212"
            android:text="@string/productprice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textViewSubTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/price_of_vegetable"
            app:layout_constraintStart_toEndOf="@+id/textViewprice"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textViewSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageView2"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/Quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewprice" />

        <com.shawnlin.numberpicker.NumberPicker

            android:id="@+id/number_picker"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewSubTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toEndOf="@+id/textViewSubTotal"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubTotalPrice"
            app:layout_constraintVertical_bias="0.0"
            app:np_dividerColor="@color/colorPrimary"
            app:np_height="180dp"
            app:np_max="59"
            app:np_min="0"
            app:np_selectedTextColor="@color/colorPrimary"
            app:np_textColor="@color/colorPrimary"
            app:np_value="3"
            app:np_width="64dp" />

        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:layout_toEndOf="@id/imageView2"
            android:layout_toRightOf="@id/imageView2"
            android:text="@string/subtotal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubTotal"
            app:layout_constraintVertical_bias="0.422" />

        <TextView
            android:id="@+id/textView212"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:layout_toEndOf="@id/imageView2"
            android:layout_toRightOf="@id/imageView2"
            android:text="@string/name_of_vegetable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSubTotalPrice"
            app:layout_constraintVertical_bias="0.714" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="302dp"
        android:layout_marginLeft="302dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="463dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#EE1919"
        android:drawableTop="@drawable/ic_dustbin"
        android:drawablePadding="-50dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="463dp"
        android:text="@string/view"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/total"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/totalprice1234"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/total"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:layout_toRightOf="@id/total"
        android:layout_toEndOf="@id/total" />

    <Button
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/checkout"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:background="#1a6600"
        android:textColor="#ffffff"/>
</RelativeLayout>